--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,3 +7,10 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
 logging.level.org.springframework.web=INFO
+
+
+springdoc.show-actuator=true
+# So url will be
+# http://localhost:8081/fabthymeleafcrud/swagger-ui/index.html
+# http://localhost:8081/fabthymeleafcrud/actuator
+# http://localhost:8081/fabthymeleafcrud/v3/api-docs
